--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   
   
   <body>
-    where is the world?
+    where is the world? <br>
+    
+    <img src="https://github.com/TG-Oliver/summer23/blob/main/images/sunS1.png">
   </body>
   
 </html>
