--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     where is the world? <br>
     
-    <img src="https://github.com/TG-Oliver/summer23/blob/main/images/sunS1.png">
+    <img src="https://tg-oliver.github.io/summer23/images/sunS1.png">
   </body>
   
 </html>
