--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   
   
   <body>
-    where is the world? <br>
-
+    Where is the world? <br>
+    Come find out.
+    <a>Go [Here]</a>
+    Just remember, time always moves forward.
   </body>
   
 </html>
