--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   
   <body>
     Where is the world? <br>
-    Come find out.
-    <a>Go [Here]</a>
+    Come find out. <br>
+    Go <a href="https://tg-oliver.github.io/summer23/time.html"[Here]></a><br>
     Just remember, time always moves forward.
   </body>
   
