--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     Where is the world? <br>
     Come find out. <br>
-    Go <a href="https://tg-oliver.github.io/summer23/time.html"[Here]></a><br>
+    Go <a href="https://tg-oliver.github.io/summer23/time.html"here></a><br>
     Just remember, time always moves forward.
   </body>
   
